made lobby.html more dynamic/fixed spacing

--- a/project/static/css/style.css
+++ b/project/static/css/style.css
@@ -163,9 +163,9 @@ h1{
 
 .scale-logo-large{
 	height: auto; 
-	width: auto; 
-	max-width: 700px; 
+	width: 45%; 
 	align-items: center;
+	padding: 0px 0px 0px 0px;
   }
 
   .scale-logo-header{
@@ -179,14 +179,11 @@ h1{
   .button_lobby {
     background-color: #1e282d;
     color: white;
-    font-family: 'Montserrat', sans-serif;
-
-    height:80px;
-    border: none;
-    cursor: pointer;
-    width: 50%;
+	font-family: 'Montserrat', sans-serif;
+    height:auto;
+    width: 35%;
     border-width: 1px;
-    font-size: 25px;
+	font-size: 1.5vw;
     border-radius: 10px;
     border: 2px solid #E8E8E8;}
 	
